# repofore

climate-forecasting/: pyproject.toml
climate-forecasting/src/: train.py
climate-forecasting/src/components/data_processing/: __init__.py  add_holidays.py  add_lags.py  add_time_features.py  process_data.py
climate-forecasting/src/components/model/: train_model.py
climate-forecasting/src/settings/: metadata.py
light-forecasting/: pyproject.toml
light-forecasting/src/: train.py
light-forecasting/src/components/data_processing/: __init__.py  add_lags.py  add_time_features.py
light-forecasting/src/components/metrics/: __init__.py  mean_abs_per_error.py
light-forecasting/src/components/visualization/: __init__.py  compare_prediction.py  feature_importance.py
light-forecasting/src/settings/: metadata.py  params.py
