[tool.poetry]
name = "light-forecasting"
version = "0.1.0"
description = ""
authors = ["Asier Villar <asiervillar@outlook.es>"]
readme = "README.md"
packages = [{include = "light_forecasting", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.1.4"
seaborn = "^0.13.1"
xgboost = "^2.0.3"
scikit-learn = "^1.3.2"
clearml = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
